# work-time-calc

./: README.md  pyproject.toml
src/work_time_calc/: calc.py  error_messages.py
src/worktimecalc/: calc.py  delta.py
tests/: benchmark.py  test.py
