[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "work-time-calc"
version = "0.1.0"
description = "Efficient work time calculator"
readme = "README.md"
authors = [{ name = "Misao" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["time", "calculator", "tools", "business time", "business hours", "work hours", "work time"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]
